--- a/gitops/apps/home-assistant/packages/helpers/_room_helpers_template.yaml.j2
+++ b/gitops/apps/home-assistant/packages/helpers/_room_helpers_template.yaml.j2
@@ -4,29 +4,29 @@
 
 input_boolean:
   {{ room }}_custom_schedule:
-    name: {{ room|replace('_',' ')|title }} – Use custom schedule
+    name: {{ room|replace('_',' ')|title }} - Use custom schedule
   {{ room }}_motion_enabled:
-    name: {{ room|replace('_',' ')|title }} – Motion Control Enabled
+    name: {{ room|replace('_',' ')|title }} - Motion Control Enabled
   {{ room }}_timer_enabled:
-    name: {{ room|replace('_',' ')|title }} – Timer Control Enabled
+    name: {{ room|replace('_',' ')|title }} - Timer Control Enabled
 
   enable_{{ room }}_morning:
-    name: {{ room|replace('_',' ')|title }} – Timer Morning Enabled
+    name: {{ room|replace('_',' ')|title }} - Timer Morning Enabled
   enable_{{ room }}_day:
-    name: {{ room|replace('_',' ')|title }} – Timer Day Enabled
+    name: {{ room|replace('_',' ')|title }} - Timer Day Enabled
   enable_{{ room }}_evening:
-    name: {{ room|replace('_',' ')|title }} – Timer Evening Enabled
+    name: {{ room|replace('_',' ')|title }} - Timer Evening Enabled
   enable_{{ room }}_night:
-    name: {{ room|replace('_',' ')|title }} – Timer Night Enabled
+    name: {{ room|replace('_',' ')|title }} - Timer Night Enabled
 
   auto_on_{{ room }}_morning:
-    name: {{ room|replace('_',' ')|title }} – Timer Morning Auto-on
+    name: {{ room|replace('_',' ')|title }} - Timer Morning Auto-on
   auto_on_{{ room }}_day:
-    name: {{ room|replace('_',' ')|title }} – Timer Day Auto-on
+    name: {{ room|replace('_',' ')|title }} - Timer Day Auto-on
   auto_on_{{ room }}_evening:
-    name: {{ room|replace('_',' ')|title }} – Timer Evening Auto-on
+    name: {{ room|replace('_',' ')|title }} - Timer Evening Auto-on
   auto_on_{{ room }}_night:
-    name: {{ room|replace('_',' ')|title }} – Timer Night Auto-on
+    name: {{ room|replace('_',' ')|title }} - Timer Night Auto-on
 
 input_datetime:
   {{ room }}_s1_start:
