--- a/gitops/apps/home-assistant/packages/helpers/input_select_template.yaml.j2
+++ b/gitops/apps/home-assistant/packages/helpers/input_select_template.yaml.j2
@@ -34,3 +34,12 @@
     - scene.{{ room }}_day
     - scene.{{ room }}_morning
   initial: scene.{{ room }}_night
+
+{{ room }}_scene_cycle:
+  name: {{ room|replace('_',' ')|title }} Scene Cycle
+  options:
+    - morning
+    - day
+    - evening
+    - night
+  initial: morning
