per window overrides

--- a/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
@@ -4,6 +4,14 @@
 
 {{ room }}_custom_schedule:
   name: {{ room|replace('_',' ')|title }} - Use custom schedule
+{{ room }}_morning_custom_time:
+  name: {{ room|replace('_',' ')|title }} - Use custom Morning time
+{{ room }}_day_custom_time:
+  name: {{ room|replace('_',' ')|title }} - Use custom Day time
+{{ room }}_evening_custom_time:
+  name: {{ room|replace('_',' ')|title }} - Use custom Evening time
+{{ room }}_night_custom_time:
+  name: {{ room|replace('_',' ')|title }} - Use custom Night time
 {{ room }}_motion_enabled:
   name: {{ room|replace('_',' ')|title }} - Motion Control Enabled
 {{ room }}_timer_enabled:
