Add initial default times to input_datetime helpers and set has_date: false for 24-hour format

--- a/gitops/apps/home-assistant/configuration/helpers/input_datetime_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_datetime_template.yaml.j2
@@ -5,12 +5,20 @@
 {{ room }}_s1_start:
   name: {{ room|replace('_',' ')|title }} Morning start
   has_time: true
+  has_date: false
+  initial: "06:00"
 {{ room }}_s2_start:
   name: {{ room|replace('_',' ')|title }} Day start
   has_time: true
+  has_date: false
+  initial: "09:00"
 {{ room }}_s3_start:
   name: {{ room|replace('_',' ')|title }} Evening start
   has_time: true
+  has_date: false
+  initial: "17:00"
 {{ room }}_s4_start:
   name: {{ room|replace('_',' ')|title }} Night start
   has_time: true
+  has_date: false
+  initial: "22:00"
