Update motion control to use same logic as timer control, add motion_activated helpers and auto-off timeouts, update dashboards

--- a/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
@@ -34,3 +34,12 @@ auto_on_{{ room }}_evening:
   name: {{ room|replace('_',' ')|title }} - Timer Evening Auto-on
 auto_on_{{ room }}_night:
   name: {{ room|replace('_',' ')|title }} - Timer Night Auto-on
+
+motion_activated_{{ room }}_morning:
+  name: {{ room|replace('_',' ')|title }} - Motion Morning Activated
+motion_activated_{{ room }}_day:
+  name: {{ room|replace('_',' ')|title }} - Motion Day Activated
+motion_activated_{{ room }}_evening:
+  name: {{ room|replace('_',' ')|title }} - Motion Evening Activated
+motion_activated_{{ room }}_night:
+  name: {{ room|replace('_',' ')|title }} - Motion Night Activated
