--- a/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
@@ -43,3 +43,95 @@ motion_activated_{{ room }}_evening:
   name: {{ room|replace('_',' ')|title }} - Motion Evening Activated
 motion_activated_{{ room }}_night:
   name: {{ room|replace('_',' ')|title }} - Motion Night Activated
+
+# Day-of-week helpers for morning slot
+{{ room }}_morning_sunday:
+  name: {{ room|replace('_',' ')|title }} - Morning Sunday
+  initial: true
+{{ room }}_morning_monday:
+  name: {{ room|replace('_',' ')|title }} - Morning Monday
+  initial: true
+{{ room }}_morning_tuesday:
+  name: {{ room|replace('_',' ')|title }} - Morning Tuesday
+  initial: true
+{{ room }}_morning_wednesday:
+  name: {{ room|replace('_',' ')|title }} - Morning Wednesday
+  initial: true
+{{ room }}_morning_thursday:
+  name: {{ room|replace('_',' ')|title }} - Morning Thursday
+  initial: true
+{{ room }}_morning_friday:
+  name: {{ room|replace('_',' ')|title }} - Morning Friday
+  initial: true
+{{ room }}_morning_saturday:
+  name: {{ room|replace('_',' ')|title }} - Morning Saturday
+  initial: true
+
+# Day-of-week helpers for day slot
+{{ room }}_day_sunday:
+  name: {{ room|replace('_',' ')|title }} - Day Sunday
+  initial: true
+{{ room }}_day_monday:
+  name: {{ room|replace('_',' ')|title }} - Day Monday
+  initial: true
+{{ room }}_day_tuesday:
+  name: {{ room|replace('_',' ')|title }} - Day Tuesday
+  initial: true
+{{ room }}_day_wednesday:
+  name: {{ room|replace('_',' ')|title }} - Day Wednesday
+  initial: true
+{{ room }}_day_thursday:
+  name: {{ room|replace('_',' ')|title }} - Day Thursday
+  initial: true
+{{ room }}_day_friday:
+  name: {{ room|replace('_',' ')|title }} - Day Friday
+  initial: true
+{{ room }}_day_saturday:
+  name: {{ room|replace('_',' ')|title }} - Day Saturday
+  initial: true
+
+# Day-of-week helpers for evening slot
+{{ room }}_evening_sunday:
+  name: {{ room|replace('_',' ')|title }} - Evening Sunday
+  initial: true
+{{ room }}_evening_monday:
+  name: {{ room|replace('_',' ')|title }} - Evening Monday
+  initial: true
+{{ room }}_evening_tuesday:
+  name: {{ room|replace('_',' ')|title }} - Evening Tuesday
+  initial: true
+{{ room }}_evening_wednesday:
+  name: {{ room|replace('_',' ')|title }} - Evening Wednesday
+  initial: true
+{{ room }}_evening_thursday:
+  name: {{ room|replace('_',' ')|title }} - Evening Thursday
+  initial: true
+{{ room }}_evening_friday:
+  name: {{ room|replace('_',' ')|title }} - Evening Friday
+  initial: true
+{{ room }}_evening_saturday:
+  name: {{ room|replace('_',' ')|title }} - Evening Saturday
+  initial: true
+
+# Day-of-week helpers for night slot
+{{ room }}_night_sunday:
+  name: {{ room|replace('_',' ')|title }} - Night Sunday
+  initial: true
+{{ room }}_night_monday:
+  name: {{ room|replace('_',' ')|title }} - Night Monday
+  initial: true
+{{ room }}_night_tuesday:
+  name: {{ room|replace('_',' ')|title }} - Night Tuesday
+  initial: true
+{{ room }}_night_wednesday:
+  name: {{ room|replace('_',' ')|title }} - Night Wednesday
+  initial: true
+{{ room }}_night_thursday:
+  name: {{ room|replace('_',' ')|title }} - Night Thursday
+  initial: true
+{{ room }}_night_friday:
+  name: {{ room|replace('_',' ')|title }} - Night Friday
+  initial: true
+{{ room }}_night_saturday:
+  name: {{ room|replace('_',' ')|title }} - Night Saturday
+  initial: true
