--- a/gitops/apps/home-assistant/configuration/helpers/input_datetime_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_datetime_template.yaml.j2
@@ -10,10 +10,12 @@
   name: {{ room|replace('_',' ')|title }} Morning Weekday start
   has_time: true
   has_date: false
+  initial: "06:00:00"
 {{ room }}_s1_weekend_start:
   name: {{ room|replace('_',' ')|title }} Morning Weekend start
   has_time: true
   has_date: false
+  initial: "06:00:00"
 {{ room }}_s2_start:
   name: {{ room|replace('_',' ')|title }} Day start
   has_time: true
@@ -22,10 +24,12 @@
   name: {{ room|replace('_',' ')|title }} Day Weekday start
   has_time: true
   has_date: false
+  initial: "09:00:00"
 {{ room }}_s2_weekend_start:
   name: {{ room|replace('_',' ')|title }} Day Weekend start
   has_time: true
   has_date: false
+  initial: "09:00:00"
 {{ room }}_s3_start:
   name: {{ room|replace('_',' ')|title }} Evening start
   has_time: true
@@ -34,10 +38,12 @@
   name: {{ room|replace('_',' ')|title }} Evening Weekday start
   has_time: true
   has_date: false
+  initial: "17:00:00"
 {{ room }}_s3_weekend_start:
   name: {{ room|replace('_',' ')|title }} Evening Weekend start
   has_time: true
   has_date: false
+  initial: "17:00:00"
 {{ room }}_s4_start:
   name: {{ room|replace('_',' ')|title }} Night start
   has_time: true
@@ -46,7 +52,9 @@
   name: {{ room|replace('_',' ')|title }} Night Weekday start
   has_time: true
   has_date: false
+  initial: "22:00:00"
 {{ room }}_s4_weekend_start:
   name: {{ room|replace('_',' ')|title }} Night Weekend start
   has_time: true
   has_date: false
+  initial: "22:00:00"
