--- a/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
@@ -4,122 +4,61 @@
 
 {{ room }}_custom_schedule:
   name: {{ room|replace('_',' ')|title }} - Use custom schedule
+
+# Custom Time Toggles (Per Slot)
 {{ room }}_morning_custom_time:
   name: {{ room|replace('_',' ')|title }} - Use custom Morning time
-{{ room }}_morning_separate_weekday_weekend:
-  name: {{ room|replace('_',' ')|title }} - Morning separate weekday/weekend times
 {{ room }}_day_custom_time:
   name: {{ room|replace('_',' ')|title }} - Use custom Day time
-{{ room }}_day_separate_weekday_weekend:
-  name: {{ room|replace('_',' ')|title }} - Day separate weekday/weekend times
 {{ room }}_evening_custom_time:
   name: {{ room|replace('_',' ')|title }} - Use custom Evening time
-{{ room }}_evening_separate_weekday_weekend:
-  name: {{ room|replace('_',' ')|title }} - Evening separate weekday/weekend times
 {{ room }}_night_custom_time:
   name: {{ room|replace('_',' ')|title }} - Use custom Night time
-{{ room }}_night_separate_weekday_weekend:
-  name: {{ room|replace('_',' ')|title }} - Night separate weekday/weekend times
+
+# Master Feature Toggles
 {{ room }}_motion_enabled:
-  name: {{ room|replace('_',' ')|title }} - Motion Control Enabled
+  name: {{ room|replace('_',' ')|title }} - Motion Control Master Switch
 {{ room }}_timer_enabled:
-  name: {{ room|replace('_',' ')|title }} - Timer Control Enabled
+  name: {{ room|replace('_',' ')|title }} - Timer Control Master Switch
 {{ room }}_smooth_transition:
   name: {{ room|replace('_',' ')|title }} - Smooth Transition
   initial: true
 
-enable_{{ room }}_morning:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Enabled
-enable_{{ room }}_morning_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Enabled (Weekday)
+# Per-Slot Motion & Auto-On Configuration
+# Morning
+{{ room }}_morning_motion_enabled:
+  name: {{ room|replace('_',' ')|title }} - Morning Motion Enabled
+  initial: false
+{{ room }}_morning_auto_on_enabled:
+  name: {{ room|replace('_',' ')|title }} - Morning Auto-On Enabled
+  initial: false
+
+# Day
+{{ room }}_day_motion_enabled:
+  name: {{ room|replace('_',' ')|title }} - Day Motion Enabled
+  initial: false
+{{ room }}_day_auto_on_enabled:
+  name: {{ room|replace('_',' ')|title }} - Day Auto-On Enabled
+  initial: false
+
+# Evening
+{{ room }}_evening_motion_enabled:
+  name: {{ room|replace('_',' ')|title }} - Evening Motion Enabled
   initial: true
-enable_{{ room }}_morning_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Enabled (Weekend)
-  initial: true
-enable_{{ room }}_day:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Enabled
-enable_{{ room }}_day_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Enabled (Weekday)
-  initial: true
-enable_{{ room }}_day_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Enabled (Weekend)
-  initial: true
-enable_{{ room }}_evening:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Enabled
-enable_{{ room }}_evening_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Enabled (Weekday)
-  initial: true
-enable_{{ room }}_evening_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Enabled (Weekend)
-  initial: true
-enable_{{ room }}_night:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Enabled
-enable_{{ room }}_night_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Enabled (Weekday)
-  initial: true
-enable_{{ room }}_night_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Enabled (Weekend)
+{{ room }}_evening_auto_on_enabled:
+  name: {{ room|replace('_',' ')|title }} - Evening Auto-On Enabled
   initial: true
 
-auto_on_{{ room }}_morning:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Auto-on
-auto_on_{{ room }}_morning_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Auto-on (Weekday)
-auto_on_{{ room }}_morning_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Morning Auto-on (Weekend)
-auto_on_{{ room }}_day:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Auto-on
-auto_on_{{ room }}_day_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Auto-on (Weekday)
-auto_on_{{ room }}_day_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Day Auto-on (Weekend)
-auto_on_{{ room }}_evening:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Auto-on
-auto_on_{{ room }}_evening_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Auto-on (Weekday)
-auto_on_{{ room }}_evening_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Evening Auto-on (Weekend)
-auto_on_{{ room }}_night:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Auto-on
-auto_on_{{ room }}_night_weekday:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Auto-on (Weekday)
-auto_on_{{ room }}_night_weekend:
-  name: {{ room|replace('_',' ')|title }} - Timer Night Auto-on (Weekend)
+# Night
+{{ room }}_night_motion_enabled:
+  name: {{ room|replace('_',' ')|title }} - Night Motion Enabled
+  initial: true
+{{ room }}_night_auto_on_enabled:
+  name: {{ room|replace('_',' ')|title }} - Night Auto-On Enabled
+  initial: false
 
-motion_activated_{{ room }}_morning:
-  name: {{ room|replace('_',' ')|title }} - Motion Morning Activated
-motion_activated_{{ room }}_morning_weekday:
-  name: {{ room|replace('_',' ')|title }} - Motion Morning Activated (Weekday)
-  initial: true
-motion_activated_{{ room }}_morning_weekend:
-  name: {{ room|replace('_',' ')|title }} - Motion Morning Activated (Weekend)
-  initial: true
-motion_activated_{{ room }}_day:
-  name: {{ room|replace('_',' ')|title }} - Motion Day Activated
-motion_activated_{{ room }}_day_weekday:
-  name: {{ room|replace('_',' ')|title }} - Motion Day Activated (Weekday)
-  initial: true
-motion_activated_{{ room }}_day_weekend:
-  name: {{ room|replace('_',' ')|title }} - Motion Day Activated (Weekend)
-  initial: true
-motion_activated_{{ room }}_evening:
-  name: {{ room|replace('_',' ')|title }} - Motion Evening Activated
-motion_activated_{{ room }}_evening_weekday:
-  name: {{ room|replace('_',' ')|title }} - Motion Evening Activated (Weekday)
-  initial: true
-motion_activated_{{ room }}_evening_weekend:
-  name: {{ room|replace('_',' ')|title }} - Motion Evening Activated (Weekend)
-  initial: true
-motion_activated_{{ room }}_night:
-  name: {{ room|replace('_',' ')|title }} - Motion Night Activated
-motion_activated_{{ room }}_night_weekday:
-  name: {{ room|replace('_',' ')|title }} - Motion Night Activated (Weekday)
-  initial: true
-motion_activated_{{ room }}_night_weekend:
-  name: {{ room|replace('_',' ')|title }} - Motion Night Activated (Weekend)
-  initial: true
-
-# Day-of-week helpers for morning slot
+# Day-of-week helpers (Keep these for granular day skipping if needed)
+# Morning
 {{ room }}_morning_sunday:
   name: {{ room|replace('_',' ')|title }} - Morning Sunday
   initial: true
@@ -142,7 +81,7 @@ motion_activated_{{ room }}_night_weekend:
   name: {{ room|replace('_',' ')|title }} - Morning Saturday
   initial: true
 
-# Day-of-week helpers for day slot
+# Day
 {{ room }}_day_sunday:
   name: {{ room|replace('_',' ')|title }} - Day Sunday
   initial: true
@@ -165,7 +104,7 @@ motion_activated_{{ room }}_night_weekend:
   name: {{ room|replace('_',' ')|title }} - Day Saturday
   initial: true
 
-# Day-of-week helpers for evening slot
+# Evening
 {{ room }}_evening_sunday:
   name: {{ room|replace('_',' ')|title }} - Evening Sunday
   initial: true
@@ -188,7 +127,7 @@ motion_activated_{{ room }}_night_weekend:
   name: {{ room|replace('_',' ')|title }} - Evening Saturday
   initial: true
 
-# Day-of-week helpers for night slot
+# Night
 {{ room }}_night_sunday:
   name: {{ room|replace('_',' ')|title }} - Night Sunday
   initial: true
