Refactor room switch control automation to include optional forced slot for light scheduling; remove unused work-calendar.ics file.

--- a/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
+++ b/gitops/apps/home-assistant/configuration/helpers/input_boolean_template.yaml.j2
@@ -43,3 +43,12 @@ motion_activated_{{ room }}_evening:
   name: {{ room|replace('_',' ')|title }} - Motion Evening Activated
 motion_activated_{{ room }}_night:
   name: {{ room|replace('_',' ')|title }} - Motion Night Activated
+
+{{ room }}_morning_smooth:
+  name: {{ room|replace('_',' ')|title }} - Morning Smooth Transition
+{{ room }}_day_smooth:
+  name: {{ room|replace('_',' ')|title }} - Day Smooth Transition
+{{ room }}_evening_smooth:
+  name: {{ room|replace('_',' ')|title }} - Evening Smooth Transition
+{{ room }}_night_smooth:
+  name: {{ room|replace('_',' ')|title }} - Night Smooth Transition
